[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aynse"
version = "0.1.0"
requires-python = ">=3.6"
authors = [{name = "satyam-kashyap", email = "abc@xyz.com"}]
description = "A lean and modern python library to fetch data from NSE"
readme = "README.md"
license = {text = "MIT"}
keywords = ["nse", "bhavcopy", "pro", "library", "finance", "stock", "jugaad", "data", "aynse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/a-y-n/aynse"
Documentation = "https://github.com/a-y-n/aynse"
Repository = "https://github.com/a-y-n/aynse"
Issues = "https://github.com/a-y-n/aynse/issues"

[project.scripts]
aynse = "aynse.cli:cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}