[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aynse"
version = "1.0.1"
requires-python = ">=3.6"
authors = [{name = "satyam-kashyap", email = "satyamsudo@gmail.com"}]
description = "A lean and modern python library to fetch data from NSE"
readme = "README.md"
license = {text = "*CMIT"}
keywords = ["nse", "bhavcopy", "aynse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://satyamkashyap.com/aynse"
Documentation = "https://satyamkashyap.com/aynse"
Repository = "https://github.com/sudotman/aynse"
Issues = "https://github.com/sudotman/aynse/issues"

[project.scripts]
aynse = "aynse.cli:cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}