[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aynse"
version = "1.3.0"
requires-python = ">=3.9"
authors = [{name = "satyam-kashyap", email = "satyamsudo@gmail.com"}]
description = "A lean and modern Python library to fetch data from NSE (National Stock Exchange of India)"
readme = "README.md"
license = "MIT"
keywords = ["nse", "bhavcopy", "aynse", "stock", "market", "india", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://satyamkashyap.com/aynse"
Documentation = "https://satyamkashyap.com/aynse"
Repository = "https://github.com/sudotman/aynse"
Issues = "https://github.com/sudotman/aynse/issues"
Changelog = "https://github.com/sudotman/aynse/releases"

[project.scripts]
aynse = "aynse.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pyfakefs",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[tool.setuptools]
packages = ["aynse", "aynse.nse", "aynse.rbi"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
aynse = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
